log
Fri 12 May 2023 12:05:15 AM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
3fac85c
Fri 12 May 2023 12:07:50 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
test.c: In function ‘createHeap’:
heap.c:39:42: error: ‘*mon.heapArray’ is used uninitialized [-Werror=uninitialized]
   39 |   mon->heapArray= (heapElem*) realloc(mon->heapArray, sizeof(heapElem)*mon->capac);
      |                                       ~~~^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
adcdd00
